--- a/.travis.yml
+++ b/.travis.yml
@@ -1,45 +1,33 @@
-sudo: false
-
 language: cpp
+sudo: true
+dist: trusty
 
-# Build with gcc and clang.
-compiler:
-  - gcc
-# Disable clang for now since it seems there's a problem using it with fast fp math; it's likely Travis' ancient environment that's at fault.
-#  - clang
+addons:
+  apt:
+    sources:
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-6
+      - gcc-6
 
-# Build both debug and release configurations, through use of an environment variable in the build matrix.
+os:
+  - linux
+  - osx
+
 env:
-  - CONFIGURATION=debug
-  - CONFIGURATION=release
+  - BUCKAROO_VERSION=v2.2.0
 
-install:
-  # Download and build SDL2 from source.
-  - mkdir dummyprefix
-  - export PREFIX=$PWD/dummyprefix
-  - export PKG_CONFIG_PATH=$PREFIX/lib/pkgconfig
-  - export PATH=$PATH:$PWD/dummyprefix/bin
-  - wget https://www.libsdl.org/release/SDL2-2.0.4.tar.gz -O SDL2.tar.gz
-  - tar -xzf SDL2.tar.gz
-  - cd SDL2-2.0.4
-  - ./configure --prefix=$PREFIX
-  - make -j5
-  - make install
-  - cd ..
-  # Download and build premake5 from source; the Travis environment doesn't have the right version of glibc6 for the prebuilt binaries to work.
-  - wget https://github.com/premake/premake-core/releases/download/v5.0.0-alpha6/premake-5.0.0-alpha6-src.zip -O premake.zip
-  - unzip premake.zip
-  - cd premake-5.0.0-alpha6/build/gmake.unix
-  - make config=release
-  - cd ../../..
-  - mv premake-5.0.0-alpha6/bin/release/premake5 premake5
+cache:
+  directories:
+    - $HOME/.buckaroo/cache
+    - $TRAVIS_BUILD_DIR/bin
 
-# Run premake to generate makefiles.
-# Have to cd into directory and back out since premake5 doesn't appear to accept a directory argument.
-before_script:
-  - cd RecastDemo && ../premake5 gmake && cd ..
+osx_image: xcode9.3
 
-# Run make in the directory containing generated makefiles, on the configuration specified by the environment variable.
+before_install:
+  - ./travis/before-install-$TRAVIS_OS_NAME.sh
+
 script:
-  - make -C RecastDemo/Build/gmake config=$CONFIGURATION
-  - RecastDemo/Bin/Tests
+  - ./bin/buckaroo install
+  - ./bin/buck build -c ui.superconsole=DISABLED //:recast
+  - ./bin/buck run -c ui.superconsole=DISABLED //Tests:tests
